# icfpc2020-tbd

./: .gitignore  Cargo.toml  README.md  compilation_units.dot
cache/: README.md
data/: galaxy-graph.html  ui.html
ops/: make_submission_local.py  make_submission_remote.py  rbuild.sh  submission_repo_deploy_key  submission_repo_deploy_key.pub
scratches/aleksejs/: Cargo.toml
scratches/aleksejs/src/: lib.rs  squiggle.rs
scratches/earthdok/: Cargo.toml  analyze_replay.py
scratches/earthdok/src/: lib.rs  simple_ai.rs
scratches/fj/: Cargo.toml  test.py
scratches/ix/: Cargo.toml
scratches/ix/src/: lib.rs  ufo_calc.rs
scratches/julie/: .gitignore  Cargo.toml
scratches/julie/src/: img_matrix.rs  lib.rs  operations.rs  png_interface.rs  predicting_ai.rs  shooting_bot.rs
scratches/manpages/: Cargo.toml  shell.nix
scratches/manpages/src/: alien_lisp.rs  lib.rs  simple_ai.rs
scratches/manpages/ufopera/: shell.nix  ufopera.py
scratches/manpages/ufopera/templates/: archive.html  index.html
scratches/pavel/: Cargo.toml
scratches/pavel/src/: lib.rs  simple_ai.rs
scratches/username/: Cargo.toml
scripts/: rbuild.sh
src/: ai_interface.rs  bee_player.rs  bee_player_lib.rs  bot_util.rs  img_matrix.rs  lib.rs  local_bot_runner.rs  operations.rs  parse_image.rs  png_files.rs  runners.rs  squiggle.rs  tree.rs  tutorial.rs  ufolang.rs  uforest.rs  vec2.rs  webapi.rs
