[package]
name = "tbd"
version = "0.1.0"
edition = "2018"

[dependencies]
ureq = "1.3.0"
png = "0.16.6"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.2"
regex = "1"

[workspace]
members = [".", "scratches/*"]

[profile.release]
lto = true

[lib]
doctest = false
