[package]
name = "julie"
version = "0.1.0"
authors = ["caudate_julie <kyra-mensk@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.6"
tbd = { path = "../.."}

[profile.release]
lto = true

[lib]
doctest = false