[package]
name = "julie"
version = "0.1.0"
authors = ["caudate_julie <kyra-mensk@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.6"
tbd = { path = "../.."}
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.2"

[lib]
doctest = false